test/fail/file-import-non-UTF-8.mo
import (_ : Text) = "file:non-utf8/sample";
